--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "grunt": "^1.0.1",
+    "grunt-cafe-mocha": "^0.1.13",
+    "grunt-eslint": "^19.0.0",
     "mocha": "^3.0.2"
   }
 }
