--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "express-session": "^1.14.1",
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.8",
-    "nodemailer": "^2.6.0"
+    "loadtest": "^2.0.2",
+    "morgan": "^1.7.0",
+    "nodemailer": "^2.6.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
