Tinkering with creating a module for db connection

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "formidable": "^1.0.17",
     "jquery-file-upload-middleware": "^0.1.8",
     "loadtest": "^2.0.2",
+    "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "nodemailer": "^2.6.0",
     "nodemailer-sendgrid-transport": "^0.2.0"
