--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/reybango/meadowlark#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
@@ -28,7 +29,8 @@
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "nodemailer": "^2.6.0",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "session-mongoose": "^0.5.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
