--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "morgan": "^1.7.0",
     "nodemailer": "^2.6.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "session-mongoose": "^0.5.2"
+    "q": "^1.4.1",
+    "session-mongoose": "^0.5.2",
+    "vhost": "^3.0.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
