--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt": "^1.0.1",
     "grunt-cafe-mocha": "^0.1.13",
     "grunt-eslint": "^19.0.0",
-    "mocha": "^3.0.2"
+    "mocha": "^3.0.2",
+    "restler": "^3.4.0"
   }
 }
