--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/reybango/meadowlark#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-bundle": "0.0.5-beta",
     "connect-mongo": "^1.3.2",
     "connect-rest": "^2.9.0",
     "cookie-parser": "^1.4.3",
