--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "morgan": "^1.7.0",
     "nodemailer": "^2.6.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "q": "^1.4.1",
     "session-mongoose": "^0.5.2",
     "vhost": "^3.0.2"
